[package]
name = "blt_python"
version = "0.2.2"
edition = "2021"
description = "Python bindings for BLT (Byte-Level Tokenizer)"
license = "Apache-2.0"
authors = ["BLT Contributors"]
repository = "https://github.com/jtrefon/blt"
homepage = "https://github.com/jtrefon/blt"

[lib]
name = "blt"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
blt_core = { path = "../blt_core", version = "0.2.2" }
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.8"

[build-dependencies]
pyo3-build-config = "0.22" 