[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "blt-tokenizer"
version = "0.2.1"
description = "High-performance byte-level tokenizer with BPE support"
authors = [
    {name = "BLT Contributors"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
homepage = "https://github.com/jtrefon/blt"
repository = "https://github.com/jtrefon/blt"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
]
requires-python = ">=3.8"
keywords = ["tokenizer", "bpe", "nlp", "byte-level", "performance"]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-benchmark>=4.0",
    "numpy>=1.20",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=0.900",
]

[tool.maturin]
module-name = "blt"
python-source = "python"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88 